<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintTask"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextWho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintWho"
            android:inputType="textPersonName" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <CheckBox
            android:id="@+id/checkboxDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDone"
            android:text="Done" />


        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDelete" />

    </LinearLayout>

</LinearLayout>